--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
 						<center><h2>Here’s some stuff I made recently.</h2></center>
 					</header>
 					<div class="parent1">
-						<img src="images/12.JPG" alt="" width="500px" >
-						<img src="images/8.JPG" alt="" width="500px" >
-						<img src="images/9.JPG" alt="" width="500px" >
+						<img src="images/12.jpg" alt="" width="500px" >
+						<img src="images/8.jpg" alt="" width="500px" >
+						<img src="images/9.jpg" alt="" width="500px" >
 						<img src="images/1.JPG" alt="" width="500px" >
 						<img src="images/2.JPG" alt="" width="500px" >
 						<img src="images/3.JPG" alt="" width="500px" >
-						<img src="images/4.JPG" alt="" width="500px" >
-						<img src="images/5.JPG" alt="" width="500px" >
-						<img src="images/6.JPG" alt="" width="500px" >
-						<img src="images/7.JPG" alt="" width="500px">
-						<img src="images/10.JPG" alt="" width="500px" >
-						<img src="images/11.JPG" alt="" width="500px" >
-						<img src="images/13.JPG" alt="" width="500px" >
-						<img src="images/14.JPG" alt="" width="500px" >
-						<img src="images/15.JPG" alt="" width="500px" >
+						<img src="images/4.jpg" alt="" width="500px" >
+						<img src="images/5.jpg" alt="" width="500px" >
+						<img src="images/6.jpg" alt="" width="500px" >
+						<img src="images/7.jpg" alt="" width="500px">
+						<img src="images/10.jpg" alt="" width="500px" >
+						<img src="images/11.jpg" alt="" width="500px" >
+						<img src="images/13.jpg" alt="" width="500px" >
+						<img src="images/14.jpg" alt="" width="500px" >
+						<img src="images/15.jpg" alt="" width="500px" >
 					</div>
 									<footer>
 						<center><p id="bu"><a href="#contact" class="button large scrolly">Get in touch with me</a></p></center>
